Fixed small icon contrast in folder

--- a/src/components/common/bookmarks/BookmarkClickable.module.css
+++ b/src/components/common/bookmarks/BookmarkClickable.module.css
@@ -69,12 +69,13 @@
 .faviconContainerMultiple {
   width: var(--favicon-size-small);
   height: var(--favicon-size-small);
+  background: #ffffff40 !important;
 }
 
 .faviconIconMultiple {
   border-radius: var(--favicon-radius-small);
   transform: translate(-50%, -50%) scale(0.5) !important;
-  filter: drop-shadow(0 0 1rem rgba(0, 0, 0, 1));
+  filter: drop-shadow(0 0 0.5rem rgba(0, 0, 0, 1));
 }
 
 /* Animations */
